--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.TheDgtl</groupId>
+    <groupId>me.entityreborn</groupId>
     <artifactId>AngelGates</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.7.9.10</version>
     <packaging>jar</packaging>
 
     <name>AngelGates</name>
