Fixed networks not saving correctly when calling /ag reload! Tweaked how Gates save their data, internally. Good things to come. Messed with command messages a bit.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: AngelGates
 main: me.entityreborn.AngelGates.AngelGates
 version: 0.7.9.10
-description: Custom gate mod for Bukkit
-authors: [Drakia, EntityReborn]
+description: Custom gate mod for Bukkit, based off of the Stargate-Bukkit port by Drakia.
+authors: [DinnerBone, Drakia, EntityReborn]
 website: http://www.thedgtl.net
 commands:
   ag:
-    description: Used to reload the plugin. Console use only.
-    usage: /<command> reload - Used to reload the plugin. Console use only.
+    description: Used to provide information about the plugin.
+    usage: /<command> - Used to provide information about the plugin.
