Fixed derped ~everyone. Added /angelgates as an alternate to /ag.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,6 @@ commands:
   ag:
     description: Used to provide information about the plugin.
     usage: /<command> - Used to provide information about the plugin.
+  angelgates:
+    description: Used to provide information about the plugin.
+    usage: /<command> - Used to provide information about the plugin.
